<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayChessMenu">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_play_as"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/play_as"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup_play_as"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_play_as">

            <RadioButton
                android:id="@+id/radioButton_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:drawableEnd="@drawable/ic_pawn_w_low_scale"
                android:text="" />

            <RadioButton
                android:id="@+id/radioButton_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:drawableEnd="@drawable/ic_pawn_b_low_scale"
                android:text=""
                />
        </RadioGroup>

        <TextView
            android:id="@+id/textView_engine_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/engine_settings"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup_play_as" />

        <TextView
            android:id="@+id/textView_limit_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/limit_strength"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_engine_settings" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_elo_skill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:showText="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_limit_strength" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elo"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/switch_elo_skill"
            app:layout_constraintEnd_toStartOf="@+id/switch_elo_skill"
            app:layout_constraintTop_toBottomOf="@+id/textView_limit_strength" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/skill"
            app:layout_constraintBottom_toBottomOf="@+id/switch_elo_skill"
            app:layout_constraintStart_toEndOf="@+id/switch_elo_skill"
            app:layout_constraintTop_toBottomOf="@+id/textView_limit_strength" />

        <TextView
            android:id="@+id/slider_elo_skill_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_elo_skill"
            />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_elo_skill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slider_elo_skill_value"/>



        <TextView
            android:id="@+id/textView_depth_time_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/depth_time_limit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slider_elo_skill" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_depth_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:showText="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_depth_time_limit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/depth"

            app:layout_constraintBottom_toBottomOf="@+id/switch_depth_time"
            app:layout_constraintEnd_toStartOf="@+id/switch_depth_time"
            app:layout_constraintTop_toBottomOf="@+id/textView_depth_time_limit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/time"
            app:layout_constraintBottom_toBottomOf="@+id/switch_depth_time"
            app:layout_constraintStart_toEndOf="@+id/switch_depth_time"
            app:layout_constraintTop_toBottomOf="@+id/textView_depth_time_limit" />

        <TextView
            android:id="@+id/textView_depth_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_depth_time"
            />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_depth_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_depth_time_value"/>

        <TextView
            android:id="@+id/textView_start_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_position"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slider_depth_time" />

        <EditText
            android:id="@+id/editText_start_pos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:ems="10"
            android:inputType="text"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_start_position" />

        <Button
            android:id="@+id/btn_start_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_start_pos"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>